# dsdpack

./: CMakeLists.txt  README.md  setup.cfg
dsdpack/: __init__.py  cgeom.py  datarep.py  generator.py  model.py
dsdpack/guitk/: __init__.py  generator.py  guiComponents.py
dslot/: __init__.py  cgeom.py  datarep.py  generator.py  htmlcss.py  model.py
dslot/guitk/: __init__.py  generator.py  guiComponents.py
files/: basic.yaml  exGeometry.yaml  exPage.yaml  exSvg.yaml  exTk1.yaml
hdot/: __init__.py  datarep.py  generator.py  htmlcss.py  model.py  svg.py
hdot/guitk/: __init__.py  generator.py  guiComponents.py
scripts/: dslotgen.py  sdd_gen.py  sddgen.py  sddgenerate.py  sddtest1.py
sddgen/: __init__.py  datarep.py  generator.py  htmlcss.py  model.py
sddgen/guitk/: __init__.py  generator.py  guiComponents.py
