[metadata]
name    = dsdpack
version = 0.0.0
author  = Takanori Kono
description = A package to describe structured data with tags and options	

[options]
python_requires = >=3.7
install_requires =
  os
  re
  logging
  pyyaml
package_dir =
  =.
packages = find:
scripts = scripts/dsdgen.py

#[options.extra_require]
#
#[options.entry_points]
#entry_points =

